Drop-test: remove minor janitorial things
- remove superfluous constructors
- remove supresswarnings
- optimize sb.append a tiny bit

(cherry picked from commit d7648b6432e033db8941ad8f55ad40d4021a1bc5)
Signed-off-by: Robert Varga <robert.varga@pantheon.sk>
Signed-off-by: Michal Rehak <mirehak@cisco.com>
Change-Id: I4c7ebc2f35a23b528bc0795ec6708c7e7eea96a7